@@ -1,2 +1,2 @@
-name= char[10]
-isoCode=char[2]
+name=not null char[10]
+isoCode=unique char[2]
